--- a/style.css
+++ b/style.css
@@ -7,3 +7,22 @@ body {
   padding: 50px 20px;
   margin: 0 auto;
 }
+
+#gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-gap: 20px;
+}
+
+.galleryImg {
+  max-width: 100%;
+  border-radius: 10px;
+  position: relative;
+  transition: transform 250ms;
+  cursor: pointer;
+}
+
+.galleryImg:hover {
+  transform: translateY(-2px);
+  box-shadow: 3px 3px 10px black;
+}
