--- a/style.css
+++ b/style.css
@@ -26,3 +26,22 @@ body {
   transform: translateY(-2px);
   box-shadow: 3px 3px 10px black;
 }
+
+#popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.95);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* transform: translateY(-100%); */
+  transition: 250ms transform;
+  padding: 50px;
+}
+
+#selectedImage {
+  max-height: 100%;
+}
